# ambra

./: .gitignore  README.md
ambra_core/: Cargo.toml
ambra_core/src/: btc.rs  btc_htlc.rs  frb_generated.rs  lib.rs  seqdex.rs
ambra_core/src/api/: mod.rs
ambra_core/tests/: smoke.rs  swap_repro.rs  sync.rs
app/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
app/android/: gradle.properties
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/io/sequentia/ambra/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/data/: api_client.dart  btc_state.dart  config.dart  format.dart  node_config.dart  price_service.dart  seqdex_client.dart  swap_service.dart  tx_flow.dart  wallet_repository.dart  xchain_client.dart  xchain_swap_service.dart
app/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/screens/: assets_screen.dart  faucet_screen.dart  history_screen.dart  lock_screen.dart  node_screen.dart  onboarding.dart  rescue_screen.dart  scan_screen.dart  send_screen.dart  shell.dart  stake_screen.dart  swap_screen.dart  xchain_swap_screen.dart
app/lib/src/theme/: theme.dart
app/lib/src/widgets/: widgets.dart
app/test/: widget_test.dart
docs/: SPEC.md
