[package]
name = "ambra_core"
version = "0.1.0"
edition = "2021"
description = "Shared Rust core for the Ambra Sequentia wallet (Android + iOS), built on SWK."
license = "MIT"

# cdylib -> Android .so (loaded by Flutter via flutter_rust_bridge) and iOS;
# staticlib -> iOS xcframework linking; lib -> native cargo tests/examples.
[lib]
crate-type = ["cdylib", "staticlib", "lib"]

# Ambra's core consumes the SWK fork (a fork of Blockstream LWK) and turns ON
# lwk_wollet's `sequentia` feature so the Sequentia send-flow (any-asset fee,
# RBF/CPFP, non-confidential-as-first-class funds, staking) is compiled in.
# Unlike lwk_bindings, which builds lwk_wollet with DEFAULT features (sequentia
# OFF), this crate reaches those code paths.
[dependencies]
# esplora = the blocking EsploraClient (reqwest + rustls — cross-compiles to
# Android cleanly, no OpenSSL) for full_scan/broadcast against the box's /api.
lwk_wollet = { version = "0.18.1", default-features = false, features = ["sequentia", "esplora"] }
# Software-only signer: drop default features ["jade","amp0"] so we don't pull
# lwk_jade/lwk_ledger (hardware wallets) or lwk_containers (docker) — irrelevant
# on mobile, and they keep the unpublished-crate closure (and binary) minimal.
lwk_signer = { version = "0.18.1", default-features = false }
lwk_common = { version = "0.18.1" }
# flutter_rust_bridge runtime; version MUST match the codegen (2.12.0).
flutter_rust_bridge = "=2.12.0"
anyhow = "1"

# Bitcoin (parent-chain testnet4) wallet: a small esplora client + raw P2WPKH tx
# building. The `bitcoin` crate itself comes via lwk_wollet::bitcoin (0.32), so we
# don't depend on it directly (keeps the version in lockstep with elements). These
# reqwest features MATCH lwk_wollet's, so cargo unifies to ONE TLS stack (rustls,
# no OpenSSL) — Android cross-compiles cleanly, same as the Sequentia esplora path.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The lwk_* crates are the unpublished SWK fork and depend on each other (and on
# `elements`) BY VERSION; these path patches redirect those to the local SWK
# checkout, and critically point `elements` at SWK's vendored rust-elements that
# can (de)serialize Sequentia's anchored block headers. (Local-dev layout: the
# `ambra` repo sits as a sibling of `SWK`. This becomes a git dep before CI.)
[patch.crates-io]
lwk_common = { path = "../../SWK/lwk_common" }
lwk_signer = { path = "../../SWK/lwk_signer" }
lwk_wollet = { path = "../../SWK/lwk_wollet" }
elements   = { path = "../../SWK/rust-elements" }
